--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <div class="col-lg-8 mx-auto text-center">
             <h2 class="section-heading text-white">Emmanuel Mosqueda Ramirez</h2>
             <hr class="light my-4">
-            <p class="text-faded mb-4">Full stack web developer with a background in retail. Able to manipulate all components to build a sophisticated website with full database backend from mockup to rollout. Driven by working with passionate diverse teams to implement projects.</p>
+            <p class="text-faded mb-4">Full stack web developer with a background in retail. Able to manipulate all components to build a sophisticated website with full database backend from mockup to rollout. Driven by working with passionate, diverse teams to implement projects.</p>
             <a class="btn btn-light btn-xl js-scroll-trigger" href="#contact">Contact me!</a>
           </div>
         </div>
@@ -87,20 +87,20 @@
       <div class="container-fluid p-0">
         <div class="row no-gutters popup-gallery">
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg">
-              <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="">
+            <a class="portfolio-box" href="img/portfolio/fullsize/1new.jpg">
+              <img class="img-fluid" src="img/portfolio/thumbnails/1new.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-name">
-                    Trivia
+                    Torq
                   </div>
                 </div>
               </div>
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/2.jpg">
-              <img class="img-fluid" src="img/portfolio/thumbnails/2.jpg" alt="">
+            <a class="portfolio-box" href="img/portfolio/fullsize/2new.jpg">
+              <img class="img-fluid" src="img/portfolio/thumbnails/2new.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-name">
