--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
 
     <section class="p-0" id="portfolio">
       <div class="container-fluid p-0">
-        <div class="row no-gutters popup-gallery">
+        <div class="row no-gutters ">
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/1new.jpg">
+            <a class="portfolio-box" href="http://167.99.6.76/" target="_blank">
               <img class="img-fluid" src="img/portfolio/thumbnails/1new.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
@@ -99,7 +99,7 @@
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/2new.jpg">
+            <a class="portfolio-box" href="http://174.138.43.93/" target="_blank" >
               <img class="img-fluid" src="img/portfolio/thumbnails/2new.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
@@ -111,12 +111,12 @@
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/3.jpg">
-              <img class="img-fluid" src="img/portfolio/thumbnails/3.jpg" alt="">
+            <a class="portfolio-box" href="https://friendfinderwithemmanuel.herokuapp.com/" target="_blank" >
+              <img class="img-fluid" src="img/portfolio/thumbnails/3new.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-name">
-                    Torq
+                    Friend Finder
                   </div>
                 </div>
               </div>
